<resources>
    <string name="app_name">everyonetayo</string>
    <string name="home">Home</string>
    <string name="시작하기" />
    <string name="title_activity_login">로그인 / 회원가입</string>
    <string name="prompt_email">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_check_password">비밀번호확인</string>
    <string name="action_check_id">중복확인</string>
    <string name="action_sign_in">회원가입</string>
    <string name="action_login">로그인</string>
    <string name="action_busnum">버스 번호</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_selectservice">서비스 선택</string>
</resources>